# Agentic_AI_Playground

./: 1_Basic_agent_run_colab.ipynb  1_Tool_Orchestration.ipynb  1_hr_coding.ipynb  ADK_1.ipynb  P2_LoopSequentialLinkedPost_run_colab.ipynb  customer_lead_processor.py  requirements.txt  test.py
9-callbacks/before_after_model/: agent.py
InterviewTemplate/InterviewTemplate/: CHANGES.md  DOCS.md  LICENSE  README.md  justfile  main.py  pyproject.toml
InterviewTemplate/InterviewTemplate/agent/: __init__.py  agent.py  schema.py  tools.py
InterviewTemplate/InterviewTemplate/config/: __init__.py  agent_config.yaml
InterviewTemplate/InterviewTemplate/docker/: .dockerignore  Dockerfile
InterviewTemplate/InterviewTemplate/scripts/: validate.py
InterviewTemplate/InterviewTemplate/static/.well-known/: agent.json
P1_persistent_staorage/: main.py
P1_persistent_staorage/memory_agent/: agent.py
P2_LoopAgent_linkedPost/: agent.py
P2_LoopAgent_linkedPost/linkedPostagent/: __init__.py  agent.py
P2_LoopAgent_linkedPost/linkedPostagent/generate_agent/: __init__.py  agent.py
P2_LoopAgent_linkedPost/linkedPostagent/refine_agent/: __init__.py  agent.py
P2_LoopAgent_linkedPost/linkedPostagent/review_agent/: agent.py
P2_LoopAgent_linkedPost/refine_agent/: agent.py
P2_LoopAgent_linkedPost/review_agent/: agent.py
P3_CallBacks/CallBacksAgent/agentcallbacks/: agent.py
P3_CallBacks/CallBacksAgent/model_callbacks/: agent.py
P3_CallBacks/CallBacksAgent/tool_callbacks/: agent.py
